# mcp_for_pcap

./: .gitignore  BLOG_pcap-mcp_设计与实战.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PCAP_MCP_需求文档.md  README.en.md  README.md  deploy_ubuntu_clean.sh  pcap_mcp_config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BLOG_pcap-mcp_痛点与价值.md  BLOG_pcap-mcp_设计与实战.md  BLOG_微信公众号文章.md  PCAP_MCP_需求文档.md
pcap_mcp/: __main__.py  config.py  doctor.py  errors.py  paths.py  proc.py  server.py  tshark_tools.py
scripts/: bootstrap.sh  install.sh  run_mcp.sh  setup.sh  uninstall.sh
