[project]
name = "pcap-mcp"
version = "0.1.0"
description = "PCAP/NGAP/NAS analyzer MCP server"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.25.0,<2.0.0",
]

[project.scripts]
pcap-mcp = "pcap_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
